--- a/src/Pages/CreateShop/CreateShop.css
+++ b/src/Pages/CreateShop/CreateShop.css
@@ -36,7 +36,7 @@ label {
   justify-content: end;
 }
 .action-btn > button {
-  width: 10%;
+  width: fit-content;
 }
 .cancel-btn {
   background-color: red;
