--- a/src/Pages/CreateShop/CreateShop.css
+++ b/src/Pages/CreateShop/CreateShop.css
@@ -11,9 +11,11 @@ select {
   font-size: 1rem;
   border-radius: 5px;
   border: 1px solid darkgray;
+  width: auto;
 }
 select {
   background-color: white;
+  width: auto;
 }
 button {
   padding: 10px 15px;
